--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -48,9 +48,8 @@ opt_in_rules: # some rules are only opt-in
   - todo
 
 included: # paths to include during linting. `--path` is ignored if present.
-  - WY Mini Tool Engine
+  - Sources
 excluded: # paths to ignore during linting. Takes precedence over `included`.
-  - WY Mini Tool Engine/Supporting Files
 
 type_name:
   min_length: 3 # only warning
