[fix] custom xcodebuild action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,4 +14,5 @@ jobs:
     steps:
     - name: Xcodebuild Action
       run: echo 'Build started'
-      run: xcodebuild clean -project MiniToolEngine.xcodeproj -scheme MiniToolEngine
+      run: |
+        xcodebuild clean -project MiniToolEngine.xcodeproj -scheme MiniToolEngine
