--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -10,12 +10,13 @@ jobs:
   build:
 
     runs-on: macos-latest
-
-    steps:
-    - name: Xcodebuild Action
-      uses: sersoft-gmbh/xcodebuild-action@v1.1
-      with:
-        project: MiniToolEngine.xcodeproj
-        scheme: MiniToolEngine
-        destination: platform=macOS
-        action: test
+    
+  steps:
+    - name: Checkout Project
+      uses: actions/checkout@v1
+    - name: Homebrew build helpers install
+      run: brew bundle
+    - name: Show the currently detailed version of Xcode for CLI
+      run: xcode-select -p
+    - name: build and test
+      run: xcodebuild clean test -scheme MiniToolEngine
