update checkout step

--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: macos-latest
     
   steps:
-    - name: Checkout Project
+    - name: Checkout
       uses: actions/checkout@v2
     - name: Homebrew build helpers install
       run: brew bundle
