--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,8 +12,10 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Homebrew build helpers install
-        run: brew bundle
+      - name: Show the currently detailed version of Xcode for CLI
+        run: xcode-select -p
+      - name: Show Build Settings
+        run: xcodebuild -project MiniToolEngine.xcodeproj -scheme MiniToolEngine
 #
 #  steps:
 #    - name: Homebrew build helpers install
