--- a/MiniToolEngine.xcodeproj/xcshareddata/xcschemes/MiniToolEngineTests.xcscheme
+++ b/MiniToolEngine.xcodeproj/xcshareddata/xcschemes/MiniToolEngineTests.xcscheme
@@ -13,7 +13,8 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            testExecutionOrdering = "random">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "F478C698246071F7002C881D"
